--- a/style/style.css
+++ b/style/style.css
@@ -7,10 +7,21 @@ body
 {
     /* background-color: #0CBABA;
     color: #380036; */
-    background-image: linear-gradient(#3f123d,#0CBABA);
+    background-image: linear-gradient(#715470,#0CBABA);
     /* background-image: linear-gradient(#251991,#011111); */
     height: 100vh;
     /* color:white; */
+}
+.modal-content
+{
+    background-image: linear-gradient(#3f123d,#0CBABA);
+    color:white;
+
+}
+.form-select
+{
+    background-color: black;
+    color:#0CBABA
 }
 .title
 {
