--- a/style/style.css
+++ b/style/style.css
@@ -7,16 +7,16 @@ body
 {
     /* background-color: #0CBABA;
     color: #380036; */
-    background-image: linear-gradient(#715470,#0CBABA);
+    
     
     height: 100vh;
     /* color:white; */
 }
 .modal-content
 {
-    background-image: linear-gradient(#3f123d,#0CBABA);
+    background-image: linear-gradient(#3572c7,#0CBABA);
     color:white;
-
+    
 }
 .form-select
 {
@@ -30,7 +30,8 @@ body
 .displayTime
 {
     /* background-image: linear-gradient(#ffffffcd,#c1cfcf7b); */
-    background: rgba(255, 255, 255, 0.1);
+    /* background: rgba(255, 255, 255, 0.1); */
+    /* background-image: linear-gradient(#2a6bbe,#1feded); */
     width:50%;
 }
 .hide
@@ -43,7 +44,8 @@ body
 }
 .btn-gradient
 {
-    background-image: linear-gradient(#0CBABA,#cbb9ca);
+    /* background-image: linear-gradient(#0CBABA,#cbb9ca); */
+    background-image:linear-gradient(#b9cae2,#43abd7)
 }
 .timeNow
 {
