--- a/style/style.css
+++ b/style/style.css
@@ -62,11 +62,8 @@ body
 }
 .other
 {
-    font-family: 'Handlee', cursive;
-    font-family: 'Aboreto', cursive;
-    font-family: 'Amatic SC', cursive;
-    /* font-family: 'Orbitron', sans-serif; */
-    font-size:2rem;
+    font-family: 'Taviraj', serif;
+    font-size:1rem;
     color: white;
 }
 @media(max-width:1200px)
@@ -112,6 +109,6 @@ body
     }
     .other
     {
-        font-size:0.5rem;
+        font-size:1px;
     }
 }
