--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Amatic+SC&family=Handlee&family=Kavoon&family=Orbitron:wght@900&family=Taviraj&display=swap');
 body
 {
-    height:90vh;
+    height:100vh;
 }
 .content
 {
@@ -9,7 +9,7 @@ body
     color: #380036; */
     
     
-    height: 100vh;
+    /* height: 100vh; */
     /* color:white; */
 }
 .modal-content
